--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
     <div class="inputStatus"></div>
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./jquery.min.js"></script>
     <script src="./function.js"></script>
 </body>
 </html>
